# ibotpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindClang.cmake  FindLLVM.cmake
include/: ibotpp.hpp
include/ibotpp/: bot.hpp  loader.hpp  module.hpp
modules/: ping.cpp  test.cpp
src/: main.cpp
